Changelog
=========

5.9-dev - (unreleased)
----------------------
* Bug fix: fix unauthorised to access Title in portlet cms activity 
  for Authenticated role (when eionet users doing comments in IMS).
  [demarant refs #9512]

5.8 - (2013-01-15)
------------------
* Feature: Added portlet to monitor content updates activity.
  [demarant fixes #9512]
* Feature: Better user feedback when sending newsletters.
  Added portlet to show emails queue status via munin.
  [demarant fixes #10268]
* Change: speedup. do not show workflow emails adresses in state > advanced.
  [demarant refs #9985] 
* Bug fix: return auto relations in reverse order from newest to oldest
  [ichimdav #9272]
* Upgrade step: on instances other than production go to www/portal_types/Article:
   - Add 'Folder' in the list of allowed contenttypes
   - This step has already been applied on production
* Change: Added Folders to allowed content types for Article
  [ichimdav #9255]
* Bug fix: Disable award notice value when CallForTender object is created in
  portal_factory
  [ichimdav #10204]

5.7 - (2012-11-29)
------------------
* Change: added customizations from productio for flas_js.dtml
  [ichimdav]
* Bug fix: fix @@rdf adapter for media field
  [tiberich #10130]

5.6 - (2012-11-22)
------------------
* Change: removed schema extender of location for Data content type 
  [ichimdav #9423]
* Change: merged values from relatedProducts field to relatedItems
  field for EEAFigure and Data objects.
  [ghicaale refs #6773]
* Bug fix: change rdfmarshaller modifiers to conform to API changes, added
  test for marshaller modifiers
  [tiberich #3981]
* Bug fix: use a field adapter instead of a full content adapter for the
  Article media, for the @@rdf view
  [tiberich #3981]

5.5 - (2012-10-04)
------------------
* Change: modify code to conform to api change in eea.rdfhmarshaller
  [tiberich #5545]

5.4 - (2012-09-27)
------------------